--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="lib" path="lib/log4j-api-2.5.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-core-2.5.jar"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.16.1.jar"/>
-	<classpathentry kind="lib" path="lib/bcprov-ext-jdk15-140.jar"/>
-	<classpathentry kind="lib" path="lib/bcprov-jdk15-140.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-ext-jdk15on-158.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk15on-158.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
