Move JSONObject Dependency to Maven

--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,10 @@
 	    <artifactId>netty-all</artifactId>
 	    <version>4.1.33.Final</version>
 	</dependency>
+	<dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20180813</version>
+	</dependency>
   </dependencies>
 </project>
